output.txt
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/lucasdelgado/workspace/ethrex/crates/vm/Cargo.toml
workspace: /Users/lucasdelgado/workspace/ethrex/Cargo.toml
warning: unused variable: `path`
  --> crates/storage/store/./storage.rs:78:16
   |
78 |     pub fn new(path: &str, engine_type: EngineType) -> Result<Self, StoreError> {
   |                ^^^^ help: if this is intentional, prefix it with an underscore: `_path`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: type alias `AccountCodeHashRLP` is never used
  --> crates/storage/store/rlp.rs:19:10
   |
19 | pub type AccountCodeHashRLP = Rlp<H256>;
   |          ^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: type alias `AccountCodeRLP` is never used
  --> crates/storage/store/rlp.rs:20:10
   |
20 | pub type AccountCodeRLP = Rlp<Bytes>;
   |          ^^^^^^^^^^^^^^

warning: type alias `BlockHashRLP` is never used
  --> crates/storage/store/rlp.rs:23:10
   |
23 | pub type BlockHashRLP = Rlp<BlockHash>;
   |          ^^^^^^^^^^^^

warning: type alias `BlockHeaderRLP` is never used
  --> crates/storage/store/rlp.rs:24:10
   |
24 | pub type BlockHeaderRLP = Rlp<BlockHeader>;
   |          ^^^^^^^^^^^^^^

warning: type alias `BlockBodyRLP` is never used
  --> crates/storage/store/rlp.rs:25:10
   |
25 | pub type BlockBodyRLP = Rlp<BlockBody>;
   |          ^^^^^^^^^^^^

warning: type alias `BlockRLP` is never used
  --> crates/storage/store/rlp.rs:26:10
   |
26 | pub type BlockRLP = Rlp<Block>;
   |          ^^^^^^^^

warning: type alias `BlockTotalDifficultyRLP` is never used
  --> crates/storage/store/rlp.rs:28:10
   |
28 | pub type BlockTotalDifficultyRLP = Rlp<U256>;
   |          ^^^^^^^^^^^^^^^^^^^^^^^

warning: type alias `ReceiptRLP` is never used
  --> crates/storage/store/rlp.rs:31:10
   |
31 | pub type ReceiptRLP = Rlp<Receipt>;
   |          ^^^^^^^^^^

warning: type alias `TransactionHashRLP` is never used
  --> crates/storage/store/rlp.rs:34:10
   |
34 | pub type TransactionHashRLP = Rlp<H256>;
   |          ^^^^^^^^^^^^^^^^^^

warning: type alias `TupleRLP` is never used
  --> crates/storage/store/rlp.rs:37:10
   |
37 | pub type TupleRLP<A, B> = Rlp<(A, B)>;
   |          ^^^^^^^^

warning: field `0` is never read
  --> crates/storage/store/rlp.rs:40:19
   |
40 | pub struct Rlp<T>(Vec<u8>, PhantomData<T>);
   |            ---    ^^^^^^^
   |            |
   |            field in this struct
   |
   = note: `Rlp` has derived impls for the traits `Debug` and `Clone`, but these are intentionally ignored during dead code analysis
help: consider changing the field to be of unit type to suppress this warning while preserving the field numbering, or remove the field
   |
40 | pub struct Rlp<T>((), PhantomData<T>);
   |                   ~~

warning: method `to` is never used
  --> crates/storage/store/rlp.rs:51:12
   |
50 | impl<T: RLPDecode> Rlp<T> {
   | ------------------------- method in this implementation
51 |     pub fn to(&self) -> T {
   |            ^^

warning: `ethrex-storage` (lib) generated 13 warnings
   Compiling ethrex-levm v0.1.0 (/Users/lucasdelgado/workspace/ethrex/crates/vm/levm)
error[E0425]: cannot find value `MULTIPLIER` in this scope
    --> crates/vm/levm/./src/gas_cost.rs:1072:22
     |
1072 |         .checked_div(MULTIPLIER)
     |                      ^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `LENGTH_PER_PAIR` in this scope
    --> crates/vm/levm/./src/precompiles.rs:1235:30
     |
1235 |     let k = calldata.len() / LENGTH_PER_PAIR;
     |                              ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `LENGTH_PER_PAIR` in this scope
    --> crates/vm/levm/./src/precompiles.rs:1246:26
     |
1246 |             .checked_mul(LENGTH_PER_PAIR)
     |                          ^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `LENGTH_PER_PAIR` in this scope
    --> crates/vm/levm/./src/precompiles.rs:1277:38
     |
1277 |                         .checked_add(LENGTH_PER_PAIR)
     |                                      ^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
error: could not compile `ethrex-levm` (lib) due to 4 previous errors
